--- a/C0120G1/Module1/NhapMonLapTrinhCanBan/TH/SuDungToantu/Btap1.html
+++ b/C0120G1/Module1/NhapMonLapTrinhCanBan/TH/SuDungToantu/Btap1.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Btap1</title>
 </head>
 <body>
-$END$
+<script src="JsToanTu.js"></script>
 </body>
 </html>
