--- a/C0120G1/Module1/NhapMonLapTrinhCanBan/BT/UD_DoYouLoveMe/DoYouloveMe.html
+++ b/C0120G1/Module1/NhapMonLapTrinhCanBan/BT/UD_DoYouLoveMe/DoYouloveMe.html
@@ -19,44 +19,37 @@
 
     let imgObj = null;
     imgObj = document.getElementById('no');
-    if (imgObj.style.left < '100px') {
-        if (imgObj.style.top < '100px') {
-            function init() {
 
-                imgObj = document.getElementById('no');
-                imgObj.style.position = 'relative';
-                imgObj.style.left = '0px';
-                imgObj.style.top = '0px';
+    function init() {
+        imgObj = document.getElementById('no');
+        imgObj.style.position = 'relative';
+        imgObj.style.left = '0px';
+        imgObj.style.top = '0px';
 
 
-            }
-
-            function right1() {
-                let x = 1000 * Math.random();
-                let y = 1000 * Math.random();
-
-                imgObj.style.left = parseInt(imgObj.style.left) + x + 'px';
-                imgObj.style.top = parseInt(imgObj.style.top) + y + 'px';
-
-            }
-
-
-            //Lấy chiều rộng của trình duyệt
-            var width = window.innerWidth
-                || document.documentElement.clientWidth
-                || document.body.clientWidth;
-            //Lấy chiều cao của trình duyệt
-            var height = window.innerHeight
-                || document.documentElement.clientHeight
-                || document.body.clientHeight;
-
-            window.onload = init;
-        } else {
-            init()
-        }
-    } else {
-        init()
     }
+
+    function right1() {
+        var x = Math.round(Math.random() * window.innerWidth);
+        var y = Math.round(Math.random() * window.innerHeight);
+        console.log()
+
+        imgObj.style.left = x + 'px';
+        imgObj.style.top = y + 'px';
+
+    }
+
+
+    //Lấy chiều rộng của trình duyệt
+    var width = window.innerWidth
+        || document.documentElement.clientWidth
+        || document.body.clientWidth;
+    //Lấy chiều cao của trình duyệt
+    var height = window.innerHeight
+        || document.documentElement.clientHeight
+        || document.body.clientHeight;
+
+    window.onload = init;
 
 
 </script>
